--- a/marlowe-playground-client/static/main.scss
+++ b/marlowe-playground-client/static/main.scss
@@ -50,6 +50,10 @@
     margin-right: 0.5rem;
 }
 
+.padded-explanation {
+    padding-bottom: 1em;
+}
+
 .full-width-card {
     table {
         width: 100%;
