--- a/marlowe-playground-client/static/main.scss
+++ b/marlowe-playground-client/static/main.scss
@@ -112,3 +112,17 @@
 .blocklyTreeLabel {
     color: black;
 }
+
+.state-row {
+    margin-left: 15px;
+    margin-top: 0px;
+    margin-bottom: 20px;
+    margin-right: 15px;
+}
+
+.state-last-row {
+    margin-left: 15px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: 15px;
+}
