--- a/marlowe-playground-client/static/main.scss
+++ b/marlowe-playground-client/static/main.scss
@@ -126,3 +126,9 @@
     margin-bottom: 0px;
     margin-right: 15px;
 }
+
+.button-box {
+    border-radius: 0;
+    background: $card-bg;
+    border: none;
+}
