--- a/marlowe-playground-client/static/main.scss
+++ b/marlowe-playground-client/static/main.scss
@@ -15,6 +15,11 @@
     margin-right: 20px;
 }
 
+.max-contract-length {
+    margin-left: 10px;
+    margin-right: 20px;
+}
+
 .invalid-transaction {
     background-color: #3c1b1b;
 }
